--- a/.deploy/api/Dockerfile
+++ b/.deploy/api/Dockerfile
@@ -20,6 +20,7 @@ ARG GOOGLE_APP_SECRET
 ARG FACEBOOK_APP_ID
 ARG FACEBOOK_APP_SECRET
 ARG JWT_SECRET
+ARG EXPRESS_SESSION_SECRET
 ARG SETTING_INVITES_ENABLED
 ARG SETTINGS_REGISTRATIONS_REQUIRED_ON_START
 ARG ADMIN_PASSWORD_RESET
@@ -127,11 +128,10 @@ ENV NODE_ENV=${NODE_ENV:-production}
 ENV API_HOST=${API_HOST:-api}
 ENV API_PORT=${API_PORT:-5500}
 ENV API_BASE_URL=${API_BASE_URL:-http://localhost:5500}
-ENV HTTPPORT=${HTTPPORT}
-ENV HTTPSPORT=${HTTPSPORT}
-ENV GQLPORT=${GQLPORT}
-ENV GQLPORT_SUBSCRIPTIONS=${GQLPORT_SUBSCRIPTIONS}
-ENV SETTING_INVITES_ENABLED=${SETTING_INVITES_ENABLED}
+ENV HTTPPORT=${HTTPPORT:-5500}
+ENV HTTPSPORT=${HTTPSPORT:-5501}
+ENV GQLPORT=${GQLPORT:-5555}
+ENV GQLPORT_SUBSCRIPTIONS=${GQLPORT_SUBSCRIPTIONS:-5050}
 ENV STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
 ENV URBAN_AIRSHIP_KEY=${URBAN_AIRSHIP_KEY}
 ENV URBAN_AIRSHIP_SECRET=${URBAN_AIRSHIP_SECRET}
@@ -142,9 +142,10 @@ ENV GOOGLE_APP_ID=${GOOGLE_APP_ID}
 ENV GOOGLE_APP_SECRET=${GOOGLE_APP_SECRET}
 ENV FACEBOOK_APP_ID=${FACEBOOK_APP_ID}
 ENV FACEBOOK_APP_SECRET=${FACEBOOK_APP_SECRET}
-ENV JWT_SECRET=${JWT_SECRET}
-ENV SETTING_INVITES_ENABLED=${SETTING_INVITES_ENABLED}
-ENV SETTINGS_REGISTRATIONS_REQUIRED_ON_START=${SETTINGS_REGISTRATIONS_REQUIRED_ON_START}
+ENV JWT_SECRET=${JWT_SECRET:-secretKey}
+ENV EXPRESS_SESSION_SECRET=${EXPRESS_SESSION_SECRET:-demand}
+ENV SETTING_INVITES_ENABLED=${SETTING_INVITES_ENABLED:-false}
+ENV SETTINGS_REGISTRATIONS_REQUIRED_ON_START=${SETTINGS_REGISTRATIONS_REQUIRED_ON_START:-false}
 ENV ADMIN_PASSWORD_RESET=${ADMIN_PASSWORD_RESET}
 ENV FAKE_DATA_GENERATOR=${FAKE_DATA_GENERATOR}
 ENV ARCGIS_CLIENT_ID=${ARCGIS_CLIENT_ID}
@@ -170,9 +171,9 @@ ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 # 5500 for HTTP
 # 5501 for HTTPS
 # 5555 for GraphQL
-# 5050 for GraphQL Subscriptions
+# 5050 for GraphQL Subscriptions (WebSockets)
 
-EXPOSE ${PORT} 5501 5050 5555
+EXPOSE ${HTTPPORT} ${HTTPSPORT} ${GQLPORT} ${GQLPORT_SUBSCRIPTIONS}
 
 ENTRYPOINT [ "./entrypoint.prod.sh" ]
 
