--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -94,19 +94,19 @@
 	},
 	"dependencies": {
 		"@agm/core": "^1.1.0",
-		"@angular/animations": "~13.0.0",
-		"@angular/cdk": "^13.0.3",
-		"@angular/common": "~13.0.0",
-		"@angular/compiler": "~13.0.0",
-		"@angular/core": "~13.0.0",
-		"@angular/forms": "~13.0.0",
-		"@angular/language-service": "^13.0.3",
-		"@angular/material": "^13.0.3",
-		"@angular/platform-browser": "~13.0.0",
-		"@angular/platform-browser-dynamic": "~13.0.0",
-		"@angular/platform-server": "^13.0.3",
-		"@angular/router": "~13.0.0",
-		"@angular/service-worker": "^13.0.3",
+		"@angular/animations": "^13.1.0",
+		"@angular/cdk": "^13.1.0",
+		"@angular/common": "^13.1.0",
+		"@angular/compiler": "^13.1.0",
+		"@angular/core": "^13.1.0",
+		"@angular/forms": "^13.1.0",
+		"@angular/language-service": "^13.1.0",
+		"@angular/material": "^13.1.0",
+		"@angular/platform-browser": "^13.1.0",
+		"@angular/platform-browser-dynamic": "^13.1.0",
+		"@angular/platform-server": "^13.1.0",
+		"@angular/router": "^13.1.0",
+		"@angular/service-worker": "^13.1.0",
 		"@apollo/client": "^3.5.5",
 		"@ever-platform/common": "^0.4.3",
 		"@ever-platform/common-angular": "^0.4.3",
@@ -122,7 +122,6 @@
 		"bootstrap": "^4.6.0",
 		"browser-detect": "^0.2.28",
 		"bson-objectid": "^2.0.1",
-		"classlist.js": "^1.1.20150312",
 		"core-js": "^3.18.3",
 		"css-element-queries": "^1.2.3",
 		"eventemitter3": "^4.0.7",
@@ -160,15 +159,14 @@
 		"tslib": "^2.3.1",
 		"uglify-js": "^3.14.2",
 		"uuid": "^8.3.2",
-		"web-animations-js": "^2.3.2",
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^13.0.4",
-		"@angular-devkit/build-optimizer": "^0.1300.4",
-		"@angular/cli": "~13.0.4",
-		"@angular/compiler-cli": "~13.0.0",
-		"@ngtools/webpack": "^13.0.4",
+		"@angular-devkit/build-angular": "^13.1.0",
+		"@angular-devkit/build-optimizer": "^0.1301.0",
+		"@angular/cli": "^13.1.0",
+		"@angular/compiler-cli": "^13.1.0",
+		"@ngtools/webpack": "^13.1.0",
 		"@types/googlemaps": "^3.43.3",
 		"@types/jasmine": "~3.9.1",
 		"@types/jasminewd2": "~2.0.10",
@@ -185,7 +183,7 @@
 		"rimraf": "^3.0.2",
 		"ts-node": "^10.4.0",
 		"tslint": "^6.1.3",
-		"typescript": "~4.4.4"
+		"typescript": "~4.5.3"
 	},
 	"engines": {
 		"node": ">=14.4.0",
