--- a/package.json
+++ b/package.json
@@ -52,36 +52,36 @@
 		"snyk-protect": "snyk protect"
 	},
 	"resolutions": {
-		"@angular-devkit/build-angular": "~13.0.4",
-		"@angular-devkit/architect": "^0.1300.4",
-		"@angular-devkit/core": "^13.0.4",
+		"@angular-devkit/build-angular": "~13.1.0",
+		"@angular-devkit/architect": "^0.1301.0",
+		"@angular-devkit/core": "^13.1.0",
 		"rxjs": "^7.4.0"
 	},
 	"dependencies": {
-		"@angular/animations": "^13.0.3",
-		"@angular/common": "^13.0.3",
-		"@angular/compiler": "^13.0.3",
-		"@angular/core": "^13.0.3",
-		"@angular/forms": "^13.0.3",
-		"@angular/language-service": "^13.0.3",
-		"@angular/platform-browser": "^13.0.3",
-		"@angular/platform-browser-dynamic": "^13.0.3",
-		"@angular/router": "^13.0.3",
-		"@angular/service-worker": "^13.0.3",
+		"@angular/animations": "^13.1.0",
+		"@angular/common": "^13.1.0",
+		"@angular/compiler": "^13.1.0",
+		"@angular/core": "^13.1.0",
+		"@angular/forms": "^13.1.0",
+		"@angular/language-service": "~13.1.0",
+		"@angular/platform-browser": "^13.1.0",
+		"@angular/platform-browser-dynamic": "^13.1.0",
+		"@angular/router": "^13.1.0",
+		"@angular/service-worker": "^13.1.0",
 		"rxjs": "^7.4.0",
 		"ng2-smart-table": "^1.7.2",
 		"ng2-completer": "^9.0.1",
 		"unleash": "^2.0.2"
 	},
 	"devDependencies": {
-		"@angular-devkit/architect": "^0.1300.4",
-		"@angular-devkit/build-angular": "~13.0.4",
-		"@angular-devkit/core": "^13.0.4",
-		"@angular-devkit/schematics": "^13.0.4",
+		"@angular-devkit/architect": "^0.1301.0",
+		"@angular-devkit/build-angular": "~13.1.0",
+		"@angular-devkit/core": "^13.1.0",
+		"@angular-devkit/schematics": "^13.1.0",
 		"@angular-eslint/eslint-plugin": "~1.0.0",
 		"@angular-eslint/eslint-plugin-template": "~1.0.0",
-		"@angular/cli": "^13.0.4",
-		"@angular/compiler-cli": "~13.0.3",
+		"@angular/cli": "^13.1.0",
+		"@angular/compiler-cli": "^13.1.0",
 		"@commitlint/cli": "^13.2.1",
 		"@commitlint/config-conventional": "^13.2.0",
 		"@commitlint/config-lerna-scopes": "^13.2.0",
@@ -204,7 +204,7 @@
 		"tslint-loader": "^3.6.0",
 		"typedoc": "^0.22.5",
 		"typemoq": "^2.1.0",
-		"typescript": "~4.4.4",
+		"typescript": "~4.5.3",
 		"yargs": "^17.2.1",
 		"typescript-tslint-plugin": "^1.0.1",
 		"uglifyjs-webpack-plugin": "^2.2.0",
